ADDED: A feature related to uploading data to excel has been added in the filtering part of Daily Report